--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="form-group">
               <div class="checkbox">
                 <label>
-                  <input type="checkbox">
+                  <input type="checkbox" name="group[357][1]">
                   I’m an ISO consultant or auditor
                 </label>
               </div>
