Added extended checkbox options

--- a/index.html
+++ b/index.html
@@ -88,8 +88,16 @@
             <div class="form-group">
               <div class="checkbox">
                 <label>
+                  My area of interest:
+                </label>
+                </br>
+                </br>
+                <label>
                   <input type="checkbox" name="group[357][1]">
-                  I’m an ISO consultant or auditor
+                  UK financial services compliance
+                  </br>
+                  <input type="checkbox" name="group[357][2]">
+                  ISO compliance
                 </label>
               </div>
             </div>
