--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <form method="GET" action="http://isometrica.us12.list-manage.com/subscribe">
             <div class="form-group">
               <div class="input-group input-group-lg">
-                <input type="text" class="form-control" name="MERGE0" placeholder="Email address">
+                <input type="text" class="form-control" name="MERGE0" placeholder="Email address" autocomplete="off">
                 <span class="input-group-btn">
                   <input type="hidden" name="u" value="4abf9c15d5008b10ff52a8415"></input>
                   <input type="hidden" name="id" value="754034dc39"></input>
