Fixed issue with separated checkbox labels

--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
                 <label>
                   <input type="checkbox" name="group[357][1]">
                   UK financial services compliance
-                  </br>
+                </label>
+                </br>
+                <label>
                   <input type="checkbox" name="group[357][2]">
                   ISO compliance
                 </label>
